UIP-1720 z-index error
Change-Id: Ide3da5c27098a19a6dca66f797d147c3150ccde6

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2845,6 +2845,7 @@ label {
     .select-list {
         visibility: hidden;
         display: initial;
+        z-index: 21;
     }
     &.input-width-auto {
         width: auto;
