UIP-1721 helphint keyboard color
Change-Id: I6a98f67c1a3e0d25d4d48fe7178f164c3b6a579e

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -871,10 +871,12 @@ input[type=file] {
                     &.highlighted {
                         background-color: $color-active-blue;
                         color: $color-white;
-
-                        &:before {
-                            background-color: $color-white;
-                        }
+                    }
+                }
+                &:hover,
+                &.highlighted {
+                    .help-tooltip-target {
+                        color: $color-white;
                     }
                 }
             }
