--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -1,6 +1,5 @@
 $icomoon-font-path: "../fonts/icons"; //make sure this stays -relative to icons file where this is imported
 
-$icon-chat-square: "\e918";
 $icon-account: "\61";
 $icon-admin-account: "\74";
 $icon-alert: "\21";
@@ -17,6 +16,7 @@ $icon-cabinet: "\24";
 $icon-calendar: "\43";
 $icon-certificate: "\e901";
 $icon-chat: "\e90e";
+$icon-chat-square: "\e918";
 $icon-circle: "\2e";
 $icon-circle-o: "\4f";
 $icon-clear: "\58";
@@ -63,6 +63,7 @@ $icon-menu: "\6d";
 $icon-minus: "\2d";
 $icon-minus-rounded: "\5f";
 $icon-network: "\25";
+$icon-new-window: "\e91f";
 $icon-next: "\7d";
 $icon-nodes: "\e911";
 $icon-non-interactive: "\e91a";
