UIP-1725 : Azure AD Integration UI Styling for web portal
Change-Id: If955d46afed3f89e5794391aae81d5520f835314

--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -116,6 +116,14 @@
     }
 }
 
+// when present in a title, not stand alone
+.collapsible-link {
+    &.inline {
+        padding-bottom: 10px;
+        padding-left: 10px;
+    }
+}
+
 .collapsible-form {
     .collapsible-section {
         .collapsible-section-title {
