UIP-1646: Tile selector bottom panel hover state
Change-Id: Ib37ec5d22029e654748dc43d7e236e6191875961

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -585,7 +585,9 @@ button.tile-button {
             color: $color-active-blue;
 
             &:hover {
+                font-weight: 800;
                 border-color: $color-white;
+                box-shadow: 0 0 3px #0e4054;
             }
         }
     }
