UIP-1740 Design updates to templates
Change-Id: I12b0d21ef67d6e1d501b2e00f6a5aaf3f86f75dd

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -443,7 +443,7 @@ label {
                 top: 4px;
                 width: 10px;
                 height: 10px;
-                background-color: $color-elderly;
+                background-color: transparent;
 
                 @include border-radius(ceil($radio-height/2) + 1);
                 @include transition($default-input-transition);
