UIP-1744 & UIP-1631 labelValue Keys and helphint
Change-Id: I0d2fc6ea672f0d8ff9f7c98608d3307b1f52e08c

--- a/packages/ui-library/src/css/layout/_label-value-pairs.scss
+++ b/packages/ui-library/src/css/layout/_label-value-pairs.scss
@@ -9,12 +9,23 @@
     @include text-label;
 
     grid-column: 1;
+
+    &:after {
+        content: ':';
+
+        padding-left: 2px;
+    }
 }
 
 .label-value-pairs__value {
     @include text-value;
 
     grid-column: 2;
+
+    & .help-tooltip {
+        padding-left: $spacing-sm;
+        vertical-align: middle;
+    }
 }
 
 .label-value-pairs__divider {
