UIP-1743 : Input Text Area --> Provide a few height default options
Change-Id: Ib7442e49a4e1a5775ff99003ebcfe1c305aa9699

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -236,6 +236,34 @@ label {
                 margin-top: 0;
             }
         }
+        &.textarea-height--short {
+            textarea {
+                height: 100px;
+            }
+        }
+
+        &.textarea-height--medium {
+            textarea {
+                height: 250px;
+            }
+        }
+
+        &.textarea-height--large {
+            textarea {
+                height: 400px;
+            }
+        }
+
+        &.readonly {
+            &.textarea-height--short,
+            &.textarea-height--medium,
+            &.textarea-height--large {
+                textarea[readonly],
+                textarea {
+                    resize: both !important;
+                }
+            }
+        }
     }
 
     &.input-text,
