--- a/packages/ui-library/src/css/layout/_hero-chart.scss
+++ b/packages/ui-library/src/css/layout/_hero-chart.scss
@@ -17,6 +17,7 @@
     .recharts-tooltip-wrapper {
         border-radius: 5px !important;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+
     }
 
     &__greeting {
@@ -73,13 +74,51 @@
         margin: 0 0 $spacing-md;
     }
 
-    &__top-chart,
+    &__top-chart {
+        path.recharts-rectangle {
+            fill-opacity: 0.6 !important;
+            &:hover {
+                fill-opacity: 1 !important;
+            }
+        }
+        .hero-tooltip {
+            &:before {
+                content: '▼';
+
+                position: absolute;
+                top: auto;
+                bottom: -$arrow-height;
+                left: $arrow-offset;
+                right: auto;
+                color: $color-white;
+            }
+        }
+        .recharts-tooltip-wrapper {
+            margin-top: -5px;
+        }
+    }
+
     &__bottom-chart {
         path.recharts-rectangle {
             fill-opacity: 0.6 !important;
             &:hover {
                 fill-opacity: 1 !important;
             }
+        }
+        .hero-tooltip {
+            &:before {
+                content: '▲';
+
+                position: absolute;
+                top: -$arrow-height;
+                bottom: auto;
+                left: $arrow-offset;
+                right: auto;
+                color: $color-white;
+            }
+        }
+        .recharts-tooltip-wrapper {
+            margin-top: 8px;
         }
     }
 
@@ -117,6 +156,10 @@
     color: $color-accent-neutral-10;
 }
 
+
+
 .hero-tooltip__bottom-value {
     color: #ffa500;
 }
+
+
