UIP-1695: Multiseries chart component
Change-Id: I891b47f2904e72c289460fad2c90a68bf6f97043

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1,4 +1,5 @@
 @import 'charting/chip-panel';
+@import 'charting/multiseries-chart';
 @import 'charting/dropdown-selector';
 @import 'layout/dashboard-cards';
 @import 'layout/charts';
