--- a/packages/ui-library/src/css/colors.scss
+++ b/packages/ui-library/src/css/colors.scss
@@ -45,8 +45,10 @@ $color-warning-yellow: #eeb91c;
 // CHARTING COLORS
 $color-charting-indigo: #193967;
 $color-charting-blue: #4c8dca;
-$color-charting-cyan: #77e6eb;
 $color-charting-magenta: #e12f51;
+$color-charting-orange: #ffa500;
+$color-charting-green: #447100;
+$color-charting-cyan: #77e6eb;
 
 // LEGACY COLOR NAMES
 $color-active: $color-active-blue;
