UIP-1745 Added features to FormSearchBar. Made demo more complete
Change-Id: Iddefce465581da856053a0446f1aca3beb729253

--- a/packages/ui-library/src/css/searchbar.scss
+++ b/packages/ui-library/src/css/searchbar.scss
@@ -39,6 +39,11 @@ $searchbar-input-height: 38px;
         max-width: $searchbar-width;
     }
 
+    &__center-control {
+        align-self: center;
+        margin-left: $spacing-md;
+    }
+
     &__right-control {
         margin-left: $spacing-md;
         text-align: right;
