--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -12,6 +12,7 @@ $icon-bar-line-chart: "\e913";
 $icon-beaker: "\e90a";
 $icon-books: "\e903";
 $icon-browser: "\e917";
+$icon-bullet-list: "\e920";
 $icon-cabinet: "\24";
 $icon-calendar: "\43";
 $icon-certificate: "\e901";
@@ -28,6 +29,7 @@ $icon-cog: "\67";
 $icon-cog-filled: "\e919";
 $icon-cogs: "\e91c";
 $icon-collapse: "\63";
+$icon-curly-braces: "\e921";
 $icon-delete: "\64";
 $icon-desktop: "\e916";
 $icon-details: "\e900";
