UIP-1766 : make checboxes and radio inputs white when in the wizard
Change-Id: I246662563f750df027fd4f8400a72de086b5b2b9

--- a/packages/ui-library/src/css/wizard.scss
+++ b/packages/ui-library/src/css/wizard.scss
@@ -28,7 +28,9 @@ $wizard-content-bg-color: $color-strong-neutral-90;
     z-index: 1;
 
     textarea,
-    input[type] {
+    input[type],
+    .input-checkbox .icon:before,
+    .input-radio .circle {
         background-color: $color-white;
     }
 
