UIP-1753 : accomodate delete button on policy conditional fieldset
Change-Id: I18514752d64dcdeced7c0491963212c6a49e5c10

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -502,6 +502,7 @@ label {
     }
 
     &.detached {
+        margin-right: 0;
         margin-bottom: 7px;
         display: block;
     }
@@ -616,6 +617,7 @@ label {
 
 fieldset {
     margin: 0 0 25px;
+    clear: both;
 
     .input-select {
         margin-right: 0;
