--- a/packages/ui-library/src/css/layout/_policy-node.scss
+++ b/packages/ui-library/src/css/layout/_policy-node.scss
@@ -100,6 +100,16 @@
 
     &__number {
         background: $color-midnight;
+        font-size: 13px;
+    }
+
+    &__number--unindented {
+        margin-left: -25px;
+    }
+
+    &__button {
+        float: right;
+        margin: -5px 0 0;
     }
 
     &__gutter-arrow {
