--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -76,6 +76,7 @@ $icon-overview: "\6f";
 $icon-pin: "\4e";
 $icon-plus: "\2b";
 $icon-plus-rounded: "\2a";
+$icon-population: "\e923";
 $icon-previous: "\7b";
 $icon-progress-2-1: "\d0";
 $icon-progress-2-2: "\d1";
@@ -100,6 +101,7 @@ $icon-progress-6-6: "\e3";
 $icon-puzzle: "\7a";
 $icon-radar: "\e907";
 $icon-resend: "\72";
+$icon-resource: "\e922";
 $icon-right: "\3e";
 $icon-search: "\73";
 $icon-server: "\80";
@@ -120,6 +122,7 @@ $icon-terminal: "\e90c";
 $icon-thumb: "\54";
 $icon-undo: "\6e";
 $icon-user: "\75";
+$icon-user_directory: "\e924";
 $icon-users: "\55";
 $icon-view: "\56";
 $icon-view-hidden: "\2f";
