--- a/packages/ui-library/src/css/html-elements.scss
+++ b/packages/ui-library/src/css/html-elements.scss
@@ -5,6 +5,7 @@ body {
     line-height: $line-height-default;
     color: $color-elephant;
     font-weight: 300;
+    background-color: #fff;
 }
 
 a {
