SSD-1774, SSD-1775 : Done button should be centered more vertically in the dialog; Background color is not consistent when scrolling right in SAML assertion pop up
Change-Id: If42bda4ce4ab4b0d714bbc25bd62bdcf04c174fd

--- a/packages/ui-library/src/css/code-view.scss
+++ b/packages/ui-library/src/css/code-view.scss
@@ -5,6 +5,9 @@
     color: $color-midnight;
     background-color: rgba($color-input-fill, 0.25);
     border: 1px solid $color-neutral-70;
+    pre {
+        background-color: rgba($color-input-fill, 0.25);
+    }
 }
 
 .code-view__font {
