--- a/packages/ui-library/src/css/reports.scss
+++ b/packages/ui-library/src/css/reports.scss
@@ -84,6 +84,10 @@
         }
     }
 
+    .input-timezone {
+        vertical-align: top;
+    }
+
     .divider {
         display: inline-block;
         width: 1px;
