UIP-1798 SASS Bug
Change-Id: I3308f622c10519b5ca8e87e5069bfc88b4d7893a

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2112,7 +2112,7 @@ input[type=file] {
             right: -($message-input-offset);
         }
         .input-container {
-            width: calc(100% - $message-input-offset);
+            width: calc(100% - #{$message-input-offset});
         }
     }
     &.input-toggle {
