--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -3,6 +3,7 @@
 @import 'code-view';
 @import 'forms/_keyword-search';
 @import 'forms/_translation-picker';
+@import 'list/column-selector.scss';
 @import 'rows/_row-builder';
 @import 'icons/_variables';
 
