UIP-1625 : add loader and error states to the heatmap card
Change-Id: I81aae1baf32a5d8c6592a09fd964bed91837f468

--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -502,5 +502,6 @@ $fullwidthBreakpoint: 950px;
     .dashboard-card__front {
         padding-top: 20px;
         padding-bottom: 20px;
+        min-height: 295px;
     }
 }
